Implement carousel in js

--- a/blog.html
+++ b/blog.html
@@ -216,7 +216,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col d-flex">
-                        <img class="img-fluid" src="./imgs/additional-support-1.jpg">
+                        <img class="img-fluid" src="./imgs/TODAS AS LOGOS.png">
                     </div>
                 </div>
             </div>
@@ -227,7 +227,11 @@
     <footer class="rodape">
         <div class="container">
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-4 d-flex justify-content-center">
+                    <img class="img-fluid" src="./imgs/LOGO EXPO 50 ANOS - BRANCO COM DOURADO.png"
+                        style="height: 150px; width: 150px;">
+                </div>
+                <div class="col-md-4 text-center">
                     <h6 class="mb-3">49ª Exposição Agropecuária, Comercial e Industrial
                         de Umuarama/22ª Feira Internacional</h6>
                     <p>Sociedade Rural de Umuarama
@@ -236,8 +240,10 @@
                         CEP 87502-970
                         Umuarama – Paraná - Brasil</p>
                 </div>
-                <div class="col-md-7 d-flex align-items-center justify-content-center">
-                    <p>Fone: +55 44 361 9500</p>
+                <div class="col-md-4 text-center">
+                    <h6 class="mb-4">Contatos:</h6>
+                    <p>WhatsApp: 44 99867-0431</p>
+                    <p>Telefone fixo: 44 3621-9500</p>
                 </div>
             </div>
         </div>
