Update imagem banner

--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
         </nav>
 
         <!--Imagem index-->
-        <div class="img-index">
-            <img class="img-fluid" src="./imgs/BANNER_TOPO.jpg">
-        </div>
+        <img style="object-fit: cover;" class="img-fluid" src="./imgs/BANNER_TOPO_AJUSTADO.png">
 
         <!-- Carousel Imagens -->
         <div class="custom-carousel-container">
