Implement carousel in image index

--- a/index.html
+++ b/index.html
@@ -99,10 +99,24 @@
                         <a href="#" class="btn btn-gold text-uppercase">Ingresso Online</a>
                     </div>
                 </div>
+            </div>
         </nav>
 
-        <!--Imagem index-->
-        <img style="object-fit: cover;" class="img-fluid" src="./imgs/BANNER_TOPO_AJUSTADO.png">
+        <!-- Carousel Imagem Index -->
+        <div class="hero-container">
+            <div class="carousel">
+                <div class="carousel-track">
+                    <img class="hero-image" src="./imgs/BANNER_TOPO.jpg" alt="Banner Topo 1">
+                    <img class="hero-image" src="./imgs/BANNER_TOPO_2.jpg" alt="Banner Topo 2">
+                    <img class="hero-image" src="./imgs/BANNER_TOPO_3.jpg" alt="Banner Topo 3">
+                </div>
+            </div>
+            <div class="navigation-icons">
+                <i class="fa-2x fa-solid fa-arrow-left prev"></i>
+                <i class="fa-2x fa-solid fa-arrow-right next"></i>
+            </div>
+        </div>
+
 
         <!-- Carousel Imagens -->
         <div class="custom-carousel-container">
