--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
 <body>
     <div class="main-content">
         <!--Navbar-->
-        <nav class="navbar navbar-expand-lg py-3 custom-navbar">
+        <nav class="navbar navbar-expand-lg py-3 custom-navbar-2">
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand d-flex align-items-center" href="#">
