Implement shows.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <a class="nav-link text-uppercase" href="blog.html">Setor Animal</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase" href="#">Rodeio</a>
+                            <a class="nav-link text-uppercase" href="shows.html">Rodeio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-uppercase" href="#">Shows</a>
@@ -96,7 +96,7 @@
                                 <i class="fa-brands fa-tiktok"></i>
                             </a>
                         </div>
-                        <a href="#" class="btn btn-gold text-uppercase">Ingresso Online</a>
+                        <a href="#" class="btn-gold text-uppercase">Ingresso Online</a>
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                             </div>
                             <!-- Botão -->
                             <div class="text-center mt-4">
-                                <a href="#" class="btn btn-gold-2 text-uppercase">Quero ver mais</a>
+                                <a href="#" class="btn-gold-2 text-uppercase">Quero ver mais</a>
                             </div>
                         </div>
                     </div>
@@ -376,7 +376,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col d-flex">
-                        <img class="img-fluid" src="./imgs/TODAS AS LOGOS.png">
+                        <img class="img-fluid" style="object-fit: contain; max-height: 150px;"
+                            src="./imgs/TODAS AS LOGOS.png">
                     </div>
                 </div>
             </div>
