--- a/shows.html
+++ b/shows.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Shows</title>
     <link rel="shortcut icon" type="imagex/png" href="">
 
     <!-- Bootstrap CSS -->
@@ -37,11 +37,12 @@
 <body>
     <div class="main-content">
         <!--Navbar-->
-        <nav class="navbar navbar-expand-lg py-3 custom-navbar-2">
+        <nav class="navbar navbar-expand-lg py-3 custom-navbar">
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand d-flex align-items-center" href="#">
-                    <img src="./imgs/LOGO EXPO 50 ANOS - DOURADO.png" alt="Logo" class="me-2" style="height: 150px;">
+                    <img src="./imgs/LOGO EXPO 50 ANOS - BRANCO COM DOURADO.png" alt="Logo" class="me-2"
+                        style="height: 150px;">
                 </a>
 
                 <!-- Botão de Colapso -->
@@ -95,118 +96,87 @@
                                 <i class="fa-brands fa-tiktok"></i>
                             </a>
                         </div>
-                        <a href="#" class="btn-gold text-uppercase">Ingresso Online</a>
+                        <a href="#" class="btn btn-gold text-uppercase">Ingresso Online</a>
                     </div>
                 </div>
+            </div>
         </nav>
 
-        <!--Imagem principal-->
-        <img class="img-fluid" src="./imgs/Parque-Crianca-77.jpg">
+        <!-- Carousel Imagem Index -->
+        <div class="hero-container">
+            <img class="hero-image" src="./imgs/BANNER_TOPO_SHOWS.jpg" alt="Banner Topo 1">
+        </div>
 
-        <!--Textos-->
-        <section class="textos">
+        <!--Cards Shows-->
+        <section class="shows">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 d-flex flex-column justify-content-center">
-                        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras consectetur orci consequat
-                            maximus tristique. In hac habitasse platea dictumst.</p>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="img-banner">
-                            <img src="./imgs/BANNER_1.jpg">
-                        </div>
-                    </div>
-                    <div class="col-md-12 mt-5">
-                        <img class="img-banner-2 img-fluid" src="./imgs/Parque-Crianca-58.jpg">
-                        <label>Lorem ipsum dolor sit amet</label>
-                    </div>
-                    <div class="col-md-6 d-flex flex-column justify-content-center">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras consectetur orci consequat
-                            maximus tristique. In hac habitasse platea dictumst. Praesent elementum metus massa.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras consectetur orci consequat
-                            maximus tristique. In hac habitasse platea dictumst. Praesent elementum metus massa.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras consectetur orci consequat
-                            maximus tristique. In hac habitasse platea dictumst. Praesent elementum metus massa.</p>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="img-banner">
-                            <img src="./imgs/BANNER_2.jpg">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!--Imagens quero ver mais-->
-        <section class="quero-ver-mais py-5">
-            <div class="container">
-                <div class="row g-3">
-                    <!-- Card 1 -->
                     <div class="col-md-4">
-                        <div class="card">
-                            <img class="img-fluid" src="./imgs/Parque-Crianca-82.jpg" alt="Evento 1">
-                            <div class="card-overlay">
-                                <p>Centenas de pessoas participam do lançamento da Expo 2024</p>
+                        <div class="card-shows">
+                            <img src="./imgs/PASSAPORTE.jpg" class="img-fluid">
+                            <h3 class="mt-4">Passaporte - Expo umuarama 50 anos</h3>
+                            <p class="mt-3"><span style="color: #d4b545"><i class="fa-solid fa-clock"></i>
+                                </span>Quinta-feira, 13 de mar</p>
+                            <div class="d-flex justify-content-start">
+                                <a href="#" class="btn-gold-2 text-uppercase">Ingresso Online</a>
                             </div>
                         </div>
                     </div>
-                    <!-- Card 2 -->
                     <div class="col-md-4">
-                        <div class="card">
-                            <img class="img-fluid" src="./imgs/Bovinos-07-03-05.jpg" alt="Evento 2">
-                            <div class="card-overlay">
-                                <p>Centenas de pessoas participam do lançamento da Expo 2024</p>
+                        <div class="card-shows">
+                            <img src="./imgs/LUAN_SANTANA.jpg" class="img-fluid">
+                            <h3 class="mt-4">Luan Santana - Expo umuarama 50 anos</h3>
+                            <p class="mt-3"><span style="color: #d4b545"><i class="fa-solid fa-clock"></i>
+                                </span>Sexta-feira, 14 de mar</p>
+                            <div class="d-flex justify-content-start">
+                                <a href="#" class="btn-gold-2 text-uppercase">Ingresso Online</a>
                             </div>
                         </div>
                     </div>
-                    <!-- Card 3 -->
                     <div class="col-md-4">
-                        <div class="card">
-                            <img class="img-fluid" src="./imgs/Palestra 11-03-1 copy.jpg" alt="Evento 3">
-                            <div class="card-overlay">
-                                <p>Centenas de pessoas participam do lançamento da Expo 2024</p>
+                        <div class="card-shows">
+                            <img src="./imgs/LAUANA_E_MURILO.jpg" class="img-fluid">
+                            <h3 class="mt-4">Lauana Prado + Murilo Hoff - Expo</h3>
+                            <p class="mt-3"><span style="color: #d4b545"><i class="fa-solid fa-clock"></i>
+                                </span>Sexta-feira, 14 de mar</p>
+                            <div class="d-flex justify-content-start">
+                                <a href="#" class="btn-gold-2 text-uppercase">Ingresso Online</a>
                             </div>
                         </div>
                     </div>
-                </div>
-                <!-- Botão -->
-                <div class="text-center mt-4">
-                    <a href="#" class="btn-gold text-uppercase">Quero ver mais</a>
-                </div>
-            </div>
-        </section>
-
-        <section class="galeria-imagens-blog py-5">
-            <div class="container">
-                <h2 class="mb-4">GALERIA DE IMAGENS</h2>
-                <div class="row">
-                    <!-- Imagem principal -->
-                    <div class="col-md-8">
-                        <div class="img-principal">
-                            <img class="img-fluid rounded" src="./imgs/Parque-Crianca-58.jpg" alt="Imagem principal">
-                            <div class="descricao">
-                                <p>Lorem ipsum dolor sit amet</p>
-                                <a href="./imgs/Parque-Crianca-58.jpg" download
-                                    class="btn btn-outline-secondary">Download em alta resolução</a>
+                    <div class="col-md-4">
+                        <div class="card-shows">
+                            <img src="./imgs/PASSAPORTE.jpg" class="img-fluid">
+                            <h3 class="mt-4">Hugo e Guilherme + Zé Neto e Cristiano</h3>
+                            <p class="mt-3"><span style="color: #d4b545"><i class="fa-solid fa-clock"></i>
+                                </span>Quinta-feira, 13 de mar</p>
+                            <div class="d-flex justify-content-start">
+                                <a href="#" class="btn-gold-2 text-uppercase">Ingresso Online</a>
                             </div>
                         </div>
                     </div>
-                    <!-- Miniaturas -->
                     <div class="col-md-4">
-                        <div class="miniaturas d-flex flex-column gap-3">
-                            <img class="img-fluid rounded" src="./imgs/Parque-Crianca-31.jpg" alt="Miniatura 1">
-                            <img class="img-fluid rounded" src="./imgs/Parque-Crianca-50.jpg" alt="Miniatura 2">
-                            <img class="img-fluid rounded" src="./imgs/Parque-Crianca-58.jpg" alt="Miniatura 3">
+                        <div class="card-shows">
+                            <img src="./imgs/LUAN_SANTANA.jpg" class="img-fluid">
+                            <h3 class="mt-4">Bruno e Marrone + Simone Mendes</h3>
+                            <p class="mt-3"><span style="color: #d4b545"><i class="fa-solid fa-clock"></i>
+                                </span>Sexta-feira, 14 de mar</p>
+                            <div class="d-flex justify-content-start">
+                                <a href="#" class="btn-gold-2 text-uppercase">Ingresso Online</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <!-- Navegação -->
-                <div class="navegacao mt-4 d-flex justify-content-end">
-                    <a href="#" class="btn btn-link"><i class="fa-solid fa-arrow-left"></i> Voltar</a>
-                    <a href="#" class="btn btn-link">Início</a>
-                    <a href="#" class="btn btn-link"><i class="fa-solid fa-print"></i> Imprimir</a>
-                    <a href="#" class="btn btn-link"><i class="fa-solid fa-download"></i> Baixar</a>
+                    <div class="col-md-4">
+                        <div class="card-shows">
+                            <img src="./imgs/LAUANA_E_MURILO.jpg" class="img-fluid">
+                            <h3 class="mt-4">Acesso ao Parque</h3>
+                            <p class="mt-3"><span style="color: #d4b545"><i class="fa-solid fa-clock"></i>
+                                </span>Sexta-feira, 14 de mar</p>
+                            <div class="d-flex justify-content-start">
+                                <a href="#" class="btn-gold-2 text-uppercase">Ingresso Online</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -222,8 +192,8 @@
                 </div>
             </div>
         </section>
-    </div>
 
+    </div>
     <!--Footer-->
     <footer class="rodape">
         <div class="container">
@@ -249,7 +219,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
