Update mobile screen

--- a/blog.html
+++ b/blog.html
@@ -60,10 +60,10 @@
                             <a class="nav-link text-uppercase" href="blog.html">Setor Animal</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase" href="shows.html">Rodeio</a>
+                            <a class="nav-link text-uppercase" href="#">Rodeio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase" href="#">Shows</a>
+                            <a class="nav-link text-uppercase" href="shows.html">Shows</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-uppercase" href="#">Comercial</a>
