--- a/shows.html
+++ b/shows.html
@@ -61,10 +61,10 @@
                             <a class="nav-link text-uppercase" href="blog.html">Setor Animal</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase" href="shows.html">Rodeio</a>
+                            <a class="nav-link text-uppercase" href="#">Rodeio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase" href="#">Shows</a>
+                            <a class="nav-link text-uppercase" href="shows.html">Shows</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-uppercase" href="#">Comercial</a>
@@ -81,7 +81,7 @@
                     </ul>
 
                     <!-- Ícones e Botão -->
-                    <div class="d-lg-flex align-items-center ms-lg-3 flex-column flex-lg-row text-center">
+                    <div class="d-lg-flex align-items-center ms-lg-3 flex-column flex-lg-row text-center nav-icones">
                         <div class="d-flex justify-content-center justify-content-lg-end mb-3 mb-lg-0">
                             <a href="#" class="text-white me-3">
                                 <i class="fa-brands fa-instagram"></i>
@@ -102,9 +102,10 @@
             </div>
         </nav>
 
-        <!-- Carousel Imagem Index -->
+        <!-- Imagem Index -->
         <div class="hero-container">
-            <img class="hero-image" src="./imgs/BANNER_TOPO_SHOWS.jpg" alt="Banner Topo 1">
+            <img class="hero-image desktop" src="./imgs/BANNER_TOPO_SHOWS.jpg" alt="Banner Topo 1">
+            <img class="hero-image mobile" src="./imgs/BANNER_TOPO_MOBILE_SHOWS.jpg" alt="Banner Topo 1">
         </div>
 
         <!--Cards Shows-->
