--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                             <a class="nav-link text-uppercase" href="blog.html">Setor Animal</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase" href="shows.html">Rodeio</a>
+                            <a class="nav-link text-uppercase" href="#">Rodeio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase" href="#">Shows</a>
+                            <a class="nav-link text-uppercase" href="shows.html">Shows</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-uppercase" href="#">Comercial</a>
@@ -81,7 +81,7 @@
                     </ul>
 
                     <!-- Ícones e Botão -->
-                    <div class="d-lg-flex align-items-center ms-lg-3 flex-column flex-lg-row text-center">
+                    <div class="d-lg-flex align-items-center ms-lg-3 flex-column flex-lg-row text-center nav-icones">
                         <div class="d-flex justify-content-center justify-content-lg-end mb-3 mb-lg-0">
                             <a href="#" class="text-white me-3">
                                 <i class="fa-brands fa-instagram"></i>
@@ -106,9 +106,13 @@
         <div class="hero-container">
             <div class="carousel">
                 <div class="carousel-track">
-                    <img class="hero-image" src="./imgs/BANNER_TOPO.jpg" alt="Banner Topo 1">
-                    <img class="hero-image" src="./imgs/BANNER_TOPO_2.jpg" alt="Banner Topo 2">
-                    <img class="hero-image" src="./imgs/BANNER_TOPO_3.jpg" alt="Banner Topo 3">
+                    <img class="hero-image desktop" src="./imgs/BANNER_TOPO.jpg" alt="Banner Topo 1">
+                    <img class="hero-image desktop" src="./imgs/BANNER_TOPO_2.jpg" alt="Banner Topo 2">
+                    <img class="hero-image desktop" src="./imgs/BANNER_TOPO_3.jpg" alt="Banner Topo 3">
+
+                    <img class="hero-image mobile" src="./imgs/MOBILE/BANNER_HOME.png" alt="Banner Topo 1">
+                    <img class="hero-image mobile" src="./imgs/MOBILE/BANNER_HOME.png" alt="Banner Topo 2">
+                    <img class="hero-image mobile" src="./imgs/MOBILE/BANNER_HOME.png" alt="Banner Topo 3">
                 </div>
             </div>
             <div class="navigation-icons">
@@ -116,7 +120,6 @@
                 <i class="fa-2x fa-solid fa-arrow-right next"></i>
             </div>
         </div>
-
 
         <!-- Carousel Imagens -->
         <div class="custom-carousel-container">
@@ -340,31 +343,31 @@
                     <div class="col-md-12">
                         <h2 class="mt-2 mb-4">Galeria de Fotos</h2>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6 col-6">
                         <img class="img-fluid" src="./imgs/Parque-Crianca-70.jpg">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6 col-6">
                         <img class="img-fluid" src="./imgs/Leilao 10-03-15.jpg">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6 col-6">
                         <img class="img-fluid" src="./imgs/Palestra 11-03-2.jpg">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6 col-6">
                         <img class="img-fluid" src="./imgs/Curso de Ovinocultura-03.jpg">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6 col-6">
                         <img class="img-fluid" src="./imgs/Abertura-Rodeio-13-03-144 copy.jpg">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6 col-6">
                         <img class="img-fluid" src="./imgs/IMG_6788.JPG">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6 col-6">
                         <img class="img-fluid" src="./imgs/Mulheres-Palestra-084.jpg">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6 col-6">
                         <img class="img-fluid" src="./imgs/Julgamento-28 copy.jpg">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6 col-6">
                         <img class="img-fluid" src="./imgs/Mulheres-Palestra-218.jpg">
                     </div>
                 </div>
