--- a/shows.html
+++ b/shows.html
@@ -187,8 +187,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col d-flex">
-                        <img class="img-fluid" style="object-fit: contain; max-height: 150px;"
-                            src="./imgs/TODAS AS LOGOS.png">
+                        <img class="img-fluid desktop" style="object-fit: contain; max-height: 150px;"
+                            src="./imgs/BANNER_LOGOS_DESKTOP.jpg">
+                        <img class="img-fluid mobile" style="object-fit: contain; max-height: 150px;"
+                            src="./imgs/MOBILE/PATROCINIOS_MOBILE.jpg">
                     </div>
                 </div>
             </div>
