--- a/index.html
+++ b/index.html
@@ -379,8 +379,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col d-flex">
-                        <img class="img-fluid" style="object-fit: contain; max-height: 150px;"
-                            src="./imgs/TODAS AS LOGOS.png">
+                        <img class="img-fluid desktop" style="object-fit: contain; max-height: 150px;"
+                            src="./imgs/BANNER_LOGOS_DESKTOP.jpg">
+                        <img class="img-fluid mobile" style="object-fit: contain; max-height: 150px;"
+                            src="./imgs/MOBILE/PATROCINIOS_MOBILE.jpg">
                     </div>
                 </div>
             </div>
@@ -392,7 +394,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 d-flex justify-content-center">
-                    <img class="img-fluid" src="./imgs/LOGO EXPO 50 ANOS - BRANCO COM DOURADO.png"
+                    <img class="img-fluid desktop" src="./imgs/LOGO EXPO 50 ANOS - BRANCO COM DOURADO.png"
                         style="height: 150px; width: 150px;">
                 </div>
                 <div class="col-md-4 text-center">
