--- a/blog.html
+++ b/blog.html
@@ -101,7 +101,8 @@
         </nav>
 
         <!--Imagem principal-->
-        <img class="img-fluid" src="./imgs/Parque-Crianca-77.jpg">
+        <img class="img-fluid blog-materias-desktop" src="./imgs/Parque-Crianca-77.jpg">
+        <img class="img-fluid blog-materias-mobile" src="./imgs/MOBILE/FOTO_MATERIA.jpg">
 
         <!--Textos-->
         <section class="textos">
