--- a/shows.html
+++ b/shows.html
@@ -147,7 +147,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card-shows">
-                            <img src="./imgs/PASSAPORTE.jpg" class="img-fluid">
+                            <img src="./imgs/HUGO_E_GUILHERME.jpg" class="img-fluid">
                             <h3 class="mt-4">Hugo e Guilherme + Zé Neto e Cristiano</h3>
                             <p class="mt-3"><span style="color: #d4b545"><i class="fa-solid fa-clock"></i>
                                 </span>Quinta-feira, 13 de mar</p>
@@ -158,7 +158,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card-shows">
-                            <img src="./imgs/LUAN_SANTANA.jpg" class="img-fluid">
+                            <img src="./imgs/BRUNO_E_MARRONE.jpg" class="img-fluid">
                             <h3 class="mt-4">Bruno e Marrone + Simone Mendes</h3>
                             <p class="mt-3"><span style="color: #d4b545"><i class="fa-solid fa-clock"></i>
                                 </span>Sexta-feira, 14 de mar</p>
@@ -169,7 +169,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card-shows">
-                            <img src="./imgs/LAUANA_E_MURILO.jpg" class="img-fluid">
+                            <img src="./imgs/ACESSO_AO_PARQUE.jpg" class="img-fluid">
                             <h3 class="mt-4">Acesso ao Parque</h3>
                             <p class="mt-3"><span style="color: #d4b545"><i class="fa-solid fa-clock"></i>
                                 </span>Sexta-feira, 14 de mar</p>
