--- a/shows.html
+++ b/shows.html
@@ -119,7 +119,8 @@
                             <p class="mt-3"><span style="color: #d4b545"><i class="fa-solid fa-clock"></i>
                                 </span>Quinta-feira, 13 de mar</p>
                             <div class="d-flex justify-content-start">
-                                <a href="#" class="btn-gold-2 text-uppercase">Ingresso Online</a>
+                                <a href="https://q2ingressos.com.br/events/passaporte-expo-umuarama-50-anos"
+                                    class="btn-gold-2 text-uppercase">Ingresso Online</a>
                             </div>
                         </div>
                     </div>
@@ -130,7 +131,8 @@
                             <p class="mt-3"><span style="color: #d4b545"><i class="fa-solid fa-clock"></i>
                                 </span>Sexta-feira, 14 de mar</p>
                             <div class="d-flex justify-content-start">
-                                <a href="#" class="btn-gold-2 text-uppercase">Ingresso Online</a>
+                                <a href="https://q2ingressos.com.br/events/luan-santana-expo-umuarama-50-anos"
+                                    class="btn-gold-2 text-uppercase">Ingresso Online</a>
                             </div>
                         </div>
                     </div>
@@ -141,7 +143,8 @@
                             <p class="mt-3"><span style="color: #d4b545"><i class="fa-solid fa-clock"></i>
                                 </span>Sexta-feira, 14 de mar</p>
                             <div class="d-flex justify-content-start">
-                                <a href="#" class="btn-gold-2 text-uppercase">Ingresso Online</a>
+                                <a href="https://q2ingressos.com.br/events/murilo-huff-lauana-prado-expo-umuarama-50-anos"
+                                    class="btn-gold-2 text-uppercase">Ingresso Online</a>
                             </div>
                         </div>
                     </div>
@@ -152,7 +155,7 @@
                             <p class="mt-3"><span style="color: #d4b545"><i class="fa-solid fa-clock"></i>
                                 </span>Quinta-feira, 13 de mar</p>
                             <div class="d-flex justify-content-start">
-                                <a href="#" class="btn-gold-2 text-uppercase">Ingresso Online</a>
+                                <a href="https://q2ingressos.com.br/events/ze-neto-cristiano-hugo-guilherme-expo-umuarama-50-anos" class="btn-gold-2 text-uppercase">Ingresso Online</a>
                             </div>
                         </div>
                     </div>
@@ -163,7 +166,7 @@
                             <p class="mt-3"><span style="color: #d4b545"><i class="fa-solid fa-clock"></i>
                                 </span>Sexta-feira, 14 de mar</p>
                             <div class="d-flex justify-content-start">
-                                <a href="#" class="btn-gold-2 text-uppercase">Ingresso Online</a>
+                                <a href="https://q2ingressos.com.br/events/bruno-e-marrone-simone-mendes-expo-umuarama-50-anos" class="btn-gold-2 text-uppercase">Ingresso Online</a>
                             </div>
                         </div>
                     </div>
@@ -174,7 +177,7 @@
                             <p class="mt-3"><span style="color: #d4b545"><i class="fa-solid fa-clock"></i>
                                 </span>Sexta-feira, 14 de mar</p>
                             <div class="d-flex justify-content-start">
-                                <a href="#" class="btn-gold-2 text-uppercase">Ingresso Online</a>
+                                <a href="https://q2ingressos.com.br/eventgroup/entrada-parque--expo-50-anos--umuarama" class="btn-gold-2 text-uppercase">Ingresso Online</a>
                             </div>
                         </div>
                     </div>
